# adder_c2rust

./: Cargo.toml  lib.rs
src/: adder.rs  main.rs
